Align icons inside buttons with text (fixes #1131) (Closes #1281)

--- a/src/button/_button.scss
+++ b/src/button/_button.scss
@@ -293,3 +293,8 @@ input.mdl-button[type="submit"] {
     }
   }
 }
+
+// Align icons inside buttons with text
+.mdl-button .material-icons {
+  vertical-align: middle;
+}
